# linalg_examples

./: .gitignore  .travis.yml  README.md  test.sh
classifier/: Cargo.toml  README.md  classifier.py  fetch_data.sh
classifier/src/: main.ng.rs  main.rs
descent/: Cargo.toml  README.md  descent.py  fetch_data.sh
descent/src/: main.ng.rs  main.rs
nn/: Cargo.toml  README.md
nn/src/: images.rs  labels.rs  main.rs  network.rs
normal/: Cargo.toml  README.md  normal.py
normal/src/: main.ng.rs  main.rs
