[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "normal"
version = "0.0.0"

[dependencies]
env_logger = "*"
log = "*"
time = "*"

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dependencies.linalg]
git = "https://github.com/japaric/linalg.rs"

[dependencies.linalg_macros]
git = "https://github.com/japaric/linalg.rs"

[dependencies.lines]
git = "https://github.com/japaric/lines.rs"
